--- a/index.html
+++ b/index.html
@@ -105,9 +105,31 @@
 
     <!-- Divider -->
     <div class="divider">
-        <div class="offer"></div>
-        <div class="offer"></div>
-        <div class="offer"></div>
+        <div class="offer">
+            <div class="img">
+                <img src="./assets/img/offer-shipping.svg" alt="">
+            </div>
+            <p>FREE 2-DAY SHIPPING
+                <span class="hide">
+                    IN THE UNITED STATES!
+                </span>
+                <span class="show">
+                    USA SHIPPING
+                </span>
+            </p>
+        </div>
+        <div class="offer">
+            <div class="img">
+                <img src="./assets/img/offer-money-back.svg" alt="">
+            </div>
+            <p>30 DAY 100% MONEY BACK GUARANTEE</p>
+        </div>
+        <div class="offer">
+            <div class="img">
+                <img src="./assets/img/offer-reviews.svg" alt="">
+            </div>
+            <p>RAVE REVIEWS FROM OUR CUSTOMERS</p>
+        </div>
     </div>
 
     <!-- Shop -->
