--- a/index.html
+++ b/index.html
@@ -143,20 +143,17 @@
                 <div class="img">
                     <img src="./assets/img/item.svg" alt="">
                 </div>
-                <p class="title">
-                    Buy 2 +
-                    <span>Get 1 Free</span>
-                </p>
+                <p class="title">Buy MagicMassage™</p>
                 <div class="prices">
                     <p class="new-price">
-                        $139.90
+                        $69.95
                         <span>
                             + Free Shipping
                         </span>
                     </p>
-                    <div>
-                        <p class="old-price">$209.85</p>
-                    </div>
+                </div>
+                <div class="guarantee-money-back">
+                    <span>30-Day Money Back</span>
                 </div>
                 <div class="installment">
                     <p>
@@ -166,29 +163,19 @@
                         <img src="./assets/img/afterpay-icon.svg" alt="">
                     </div>
                 </div>
-                <div class="guarantee">
-                    <div class="top-left-section">
-                        <p>SAVE $70 - 33% OFF!</p>
+                <div>
+                    <div class="btn-primary btn-get-magic">
+                        <p>GET YOUR MAGIC</p>
                     </div>
-                    <div class="top-right-section guarantee-money-back">
-                        <span>30-Day Money Back</span>
+                    <div class="payments">
+                        <img src="./assets/img/payment-amex.svg" alt="">
+                        <img src="./assets/img/payment-apple-pay.svg" alt="">
+                        <img src="./assets/img/payment-google-pay.svg" alt="">
+                        <img src="./assets/img/payment-maestro.svg" alt="">
+                        <img src="./assets/img/payment-mastercard.svg" alt="">
+                        <img src="./assets/img/payment-paypal.svg" alt="">
+                        <img src="./assets/img/payment-visa.svg" alt="">
                     </div>
-                    <div class="bottom-section">
-                        <p>6 orders at this price remaining</p>
-                    </div>
-                    
-                </div>
-                <div class="btn-primary btn-get-magic">
-                    <p>GET YOUR MAGIC</p>
-                </div>
-                <div class="payments">
-                    <img src="./assets/img/payment-amex.svg" alt="">
-                    <img src="./assets/img/payment-apple-pay.svg" alt="">
-                    <img src="./assets/img/payment-google-pay.svg" alt="">
-                    <img src="./assets/img/payment-maestro.svg" alt="">
-                    <img src="./assets/img/payment-mastercard.svg" alt="">
-                    <img src="./assets/img/payment-paypal.svg" alt="">
-                    <img src="./assets/img/payment-visa.svg" alt="">
                 </div>
             </div>
             <div class="card">
@@ -270,7 +257,7 @@
                 </div>
                 <div class="installment">
                     <p>
-                        Or 4 interest-free installments of <span>$34.99</span> by
+                        Or 4 interest-free installments of <span>$52.50</span> by
                     </p>
                     <div class="company">                        
                         <img src="./assets/img/afterpay-icon.svg" alt="">
