--- a/index.html
+++ b/index.html
@@ -292,14 +292,113 @@
     </div>
 
     <!-- Testimonials -->
-    <div class="testimonials">
-        <div class="title"></div>
-        <div class="single-testimonial">
-            <div class="img"></div>
-            <div class="name"></div>
-            <div class="verified"></div>
-            <div class="stars"></div>
-            <div class="text"></div>
+    <div class="testimonials main-padding" >
+        <p class="title">
+            Hear what our customers 
+            <span>
+                are saying
+            </span>
+        </p>
+        <div class="top-part">
+            <div class="reviews">
+                <img src="./assets/img/stars.svg" alt="">
+                <span>131 TOTAL REVIEWS</span>
+            </div>
+            <div class="write-a-review">
+                <p>Write a review</p>
+            </div>
+        </div>
+        <div class="testimonials-wrapper" id="testimonials-wrapper">
+            <div class="testimonials-container" id="testimonials-container">
+                <div class="single-testimonial">
+                    <div class="img">
+                        <img src="./assets/img/testimonial-1.svg" alt="">
+                    </div>
+                    <div class="info">
+                        <div class="name">
+                            <span>Megan K.</span>
+                            <div class="verified">
+                                <img src="./assets/img/verified-icon.svg" alt="">
+                                <span>VERIFIED BUYER</span>
+                            </div>
+                        </div>
+                        <div class="stars">
+                            <img src="./assets/img/stars.svg" alt="">
+                        </div>
+                        <p class="text">
+                            I love the MagicMassage! It’s simple to use, does not mess up my curly hair as many other similar products do, and the massage is relaxing as it is refreshing.
+                            I feel like it has been made for my scalp! It just feels right.
+                        </p>
+                    </div>
+                </div>
+                <div class="single-testimonial">
+                    <div class="img">
+                        <img src="./assets/img/testimonial-1.svg" alt="">
+                    </div>
+                    <div class="info">
+                        <div class="name">
+                            <span>Megan K.</span>
+                            <div class="verified">
+                                <img src="./assets/img/verified-icon.svg" alt="">
+                                <span>VERIFIED BUYER</span>
+                            </div>
+                        </div>
+                        <div class="stars">
+                            <img src="./assets/img/stars.svg" alt="">
+                        </div>
+                        <p class="text">
+                            I love the MagicMassage! It’s simple to use, does not mess up my curly hair as many other similar products do, and the massage is relaxing as it is refreshing.
+                            I feel like it has been made for my scalp! It just feels right.
+                        </p>
+                    </div>
+                </div>
+                <div class="single-testimonial">
+                    <div class="img">
+                        <img src="./assets/img/testimonial-1.svg" alt="">
+                    </div>
+                    <div class="info">
+                        <div class="name">
+                            <span>Megan K.</span>
+                            <div class="verified">
+                                <img src="./assets/img/verified-icon.svg" alt="">
+                                <span>VERIFIED BUYER</span>
+                            </div>
+                        </div>
+                        <div class="stars">
+                            <img src="./assets/img/stars.svg" alt="">
+                        </div>
+                        <p class="text">
+                            I love the MagicMassage! It’s simple to use, does not mess up my curly hair as many other similar products do, and the massage is relaxing as it is refreshing.
+                            I feel like it has been made for my scalp! It just feels right.
+                        </p>
+                    </div>
+                </div>
+                <div class="single-testimonial">
+                    <div class="img">
+                        <img src="./assets/img/testimonial-1.svg" alt="">
+                    </div>
+                    <div class="info">
+                        <div class="name">
+                            <span>Megan K.</span>
+                            <div class="verified">
+                                <img src="./assets/img/verified-icon.svg" alt="">
+                                <span>VERIFIED BUYER</span>
+                            </div>
+                        </div>
+                        <div class="stars">
+                            <img src="./assets/img/stars.svg" alt="">
+                        </div>
+                        <p class="text">
+                            I love the MagicMassage! It’s simple to use, does not mess up my curly hair as many other similar products do, and the massage is relaxing as it is refreshing.
+                            I feel like it has been made for my scalp! It just feels right.
+                        </p>
+                    </div>
+                </div>
+            </div>            
+        </div>
+        <div class="pagination-wrapper" id="pagination-wrapper">
+            <!-- <div class="pagination active"></div>
+            <div class="pagination"></div> -->
         </div>
     </div>
 
@@ -314,5 +413,6 @@
             </div>
         </div>
     </div>
+    <script src="/assets/js/script.js"></script>
 </body>
 </html>
